--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@vueuse/core": "^13.1.0",
     "pinia": "^3.0.1",
     "sass": "^1.86.3",
     "vue": "^3.5.13",
